--- a/cart/public/index.html
+++ b/cart/public/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head> </head>
   <body>
-    <div id="dev-products"></div>
     <div id="dev-cart"></div>
   </body>
 </html>
